--- a/src/app/components/character-detail/character-detail.component.html
+++ b/src/app/components/character-detail/character-detail.component.html
@@ -1,70 +1,70 @@
-<div class="list-group" *ngIf="character">
-  <a class="list-group-item list-group-item-action">
+<ul class="list-group" *ngIf="character">
+  <li class="list-group-item">
     <p *ngIf="character.name == ''">
       Name: "anonym"
     </p>
     <p *ngIf="character.name != ''">
       Name: {{ character.name }}
     </p>
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Gender: {{ character.gender }}
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Culture: {{ character.culture }}
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Born: {{ character.born }}
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Died: {{ character.died }}
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Titles: {{ character.titles }}
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Aliases: {{ character.aliases }}
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Father:
     <a *ngIf="father" [routerLink]="['/character/' + idService.getCharacterId(character.father)]" class="btn btn-outline-secondary">
       {{ father.name }}
     </a>
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
    Mother:
     <a *ngIf="mother" [routerLink]="['/character/' + idService.getCharacterId(character.mother)]" class="btn btn-outline-secondary">
       {{ mother.name }}
     </a>
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Spouse:
     <a *ngIf="spouse" [routerLink]="['/character/' + idService.getCharacterId(character.spouse)]" class="btn btn-outline-secondary">
       {{ spouse.name }}
     </a>
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Allegiances:
     <a *ngFor="let house of allegiances" [routerLink]="['/house/' + idService.getHouseId(house.url)]" class="btn btn-outline-secondary">
       {{ house.name }}
     </a>
-  </a>
-  <a class="list-group-item list-group-item-action ">
+  </li>
+  <li class="list-group-item">
     Books:
     <a *ngFor="let book of books" [routerLink]="['/book/' + idService.getBookId(book.url)]" class="btn btn-outline-secondary">
       {{ book.name }}
     </a>
-  </a>
-  <a class="list-group-item list-group-item-action ">
+  </li>
+  <li class="list-group-item">
     POV books:
     <a *ngFor="let book of povBooks" [routerLink]="['/book/' + idService.getBookId(book.url)]" class="btn btn-outline-secondary">
       {{ book.name }}
     </a>
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     TV series: {{ character.tvSeries }}
-  </a>
-  <a class="list-group-item list-group-item-action">
+  </li>
+  <li class="list-group-item">
     Played by: {{ character.playedBy }}
-  </a>
-</div>
+  </li>
+</ul>
